add new website from server na

--- a/xem-phim-moi/ac-linh-trong-xac-me/index.html
+++ b/xem-phim-moi/ac-linh-trong-xac-me/index.html
@@ -1191,7 +1191,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             7
+             8
             </dd>
             <br/>
            </dl>
@@ -1781,18 +1781,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/black-beach" title="Black Beach">
+          <a class="list-top-movie-link" href="/phim-moi/co-nang-ba-dao" title="Cô Nàng Bá Đạo">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/black-beach-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-nang-ba-dao-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Black Beach
+             Cô Nàng Bá Đạo
             </span>
             <span class="list-top-movie-item-en">
-             Black Beach
+             This Girl Is Bad Ass
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/cuoc-chien-khong-gian-phan-4" title="Cuộc Chiến Không Gian (Phần 4)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-chien-khong-gian-phan-4-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Cuộc Chiến Không Gian (Phần 4)
+            </span>
+            <span class="list-top-movie-item-en">
+             For All Mankind Season 4
             </span>
             <span class="list-top-movie-item-view">
              4 lượt xem
@@ -1803,21 +1825,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nu-sinh-diep-vien" title="Nữ sinh điệp viên">
+          <a class="list-top-movie-link" href="/phim-moi/tam-tram-buu-binh-bon-tau-den-bac-pha" title="Tám Trăm Bưu Binh Bôn Tẩu Đến Bắc Pha">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nu-sinh-diep-vien-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tam-tram-buu-binh-bon-tau-den-bac-pha-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nữ sinh điệp viên
+             Tám Trăm Bưu Binh Bôn Tẩu Đến Bắc Pha
             </span>
             <span class="list-top-movie-item-en">
-             D.E.B.S.
+             Impasse Rescue
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1825,21 +1847,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/legendary-tomb-of-the-dragon" title="Legendary: Tomb of the Dragon">
+          <a class="list-top-movie-link" href="/phim-moi/sieu-nhan-dien-quang-z" title="Siêu Nhân Điện Quang Z">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/legendary-tomb-of-the-dragon-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sieu-nhan-dien-quang-z-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Legendary: Tomb of the Dragon
+             Siêu Nhân Điện Quang Z
             </span>
             <span class="list-top-movie-item-en">
-             Legendary: Tomb of the Dragon
+             Ultraman Z
             </span>
             <span class="list-top-movie-item-view">
-             0 lượt xem
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1847,40 +1869,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/goodnight-mommy" title="Goodnight Mommy">
+          <a class="list-top-movie-link" href="/phim-moi/the-new-scooby-doo-movies-phan-2" title="The New Scooby-Doo Movies (Phần 2)">
            <span class="status">
-            HD Vietsub
+            HD Nosub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/goodnight-mommy-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-new-scooby-doo-movies-phan-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Goodnight Mommy
+             The New Scooby-Doo Movies (Phần 2)
             </span>
             <span class="list-top-movie-item-en">
-             Goodnight Mommy
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ke-deo-bam-phan-1" title="Kẻ đeo bám (Phần 1)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ke-deo-bam-phan-1-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Kẻ đeo bám (Phần 1)
-            </span>
-            <span class="list-top-movie-item-en">
-             You (Season 1)
+             The New Scooby-Doo Movies (Season 2)
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
