--- a/xem-phim-moi/ac-linh-trong-xac-me/index.html
+++ b/xem-phim-moi/ac-linh-trong-xac-me/index.html
@@ -1191,7 +1191,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             8
+             9
             </dd>
             <br/>
            </dl>
@@ -1781,18 +1781,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/co-nang-ba-dao" title="Cô Nàng Bá Đạo">
+          <a class="list-top-movie-link" href="/phim-moi/hoang-thuong-dung-cham-vao-ta" title="Hoàng Thượng Đừng Chạm Vào Ta">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-nang-ba-dao-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoang-thuong-dung-cham-vao-ta-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cô Nàng Bá Đạo
+             Hoàng Thượng Đừng Chạm Vào Ta
             </span>
             <span class="list-top-movie-item-en">
-             This Girl Is Bad Ass
+             Don't Touch Me, Your Majesty
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1803,18 +1803,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cuoc-chien-khong-gian-phan-4" title="Cuộc Chiến Không Gian (Phần 4)">
+          <a class="list-top-movie-link" href="/phim-moi/the-luong-nan-cua-abraham-lincoln" title="Thế Lưỡng Nan Của Abraham Lincoln">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-chien-khong-gian-phan-4-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-luong-nan-cua-abraham-lincoln-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cuộc Chiến Không Gian (Phần 4)
+             Thế Lưỡng Nan Của Abraham Lincoln
             </span>
             <span class="list-top-movie-item-en">
-             For All Mankind Season 4
+             Lincoln's Dilemma
+            </span>
+            <span class="list-top-movie-item-view">
+             5 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/te-cong-1997" title="Tế Công 1997">
+           <span class="status">
+            HD Lồng Tiếng
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/te-cong-1997-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Tế Công 1997
+            </span>
+            <span class="list-top-movie-item-en">
+             Tế Công
             </span>
             <span class="list-top-movie-item-view">
              4 lượt xem
@@ -1825,65 +1847,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tam-tram-buu-binh-bon-tau-den-bac-pha" title="Tám Trăm Bưu Binh Bôn Tẩu Đến Bắc Pha">
+          <a class="list-top-movie-link" href="/phim-moi/meo-beo-sieu-dang" title="Mèo Béo Siêu Đẳng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tam-tram-buu-binh-bon-tau-den-bac-pha-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/meo-beo-sieu-dang-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tám Trăm Bưu Binh Bôn Tẩu Đến Bắc Pha
+             Mèo Béo Siêu Đẳng
             </span>
             <span class="list-top-movie-item-en">
-             Impasse Rescue
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/sieu-nhan-dien-quang-z" title="Siêu Nhân Điện Quang Z">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sieu-nhan-dien-quang-z-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Siêu Nhân Điện Quang Z
-            </span>
-            <span class="list-top-movie-item-en">
-             Ultraman Z
-            </span>
-            <span class="list-top-movie-item-view">
-             4 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/the-new-scooby-doo-movies-phan-2" title="The New Scooby-Doo Movies (Phần 2)">
-           <span class="status">
-            HD Nosub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-new-scooby-doo-movies-phan-2-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             The New Scooby-Doo Movies (Phần 2)
-            </span>
-            <span class="list-top-movie-item-en">
-             The New Scooby-Doo Movies (Season 2)
+             The Amazing Maurice
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/hoang-tu-huyen-thoai-2" title="Hoàng tử huyền thoại">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoang-tu-huyen-thoai-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Hoàng tử huyền thoại
+            </span>
+            <span class="list-top-movie-item-en">
+             Prince of Legend
+            </span>
+            <span class="list-top-movie-item-view">
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
